# grpc-rust-example

./: Cargo.toml  build.rs
src/: client.rs  server.rs
