[package]
name = "grpc_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.4"
tokio = {version = "1.37.0", features = ["full"]}

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"